--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
 	],
 	"license": "MIT",
 	"dependencies": {
+	  	"jquery": "2.1.1",
 		"angular": "1.3.0",
 		"angular-route": "1.3.0",
 		"angular-translate": "2.4.2",
