--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
 	  	"jquery": "2.1.1",
 		"angular": "1.3.0",
 		"angular-route": "1.3.0",
+		"angular-touch": "1.3.0",
 		"angular-translate": "2.4.2",
 		"angular-translate-loader-static-files": "2.4.2",
 		"components-font-awesome": "4.2.0",
